--- a/ControlMedico/ControlMedico/View/ViewMedico/Monitor.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/Monitor.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControlMedico.View.ViewMedico.Monitor">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Aqui se mostrará el monitor del paciente!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             x:Class="ControlMedico.View.ViewMedico.Monitor"
+             BackgroundColor="White"
+             >
+    <Grid Margin="11" RowDefinitions="20,*">
+        <Label Text="{Binding NombrePaciente}" TextColor="Black" Grid.Row="0"/>
+    </Grid>
+    
+
+
 </ContentPage>
