--- a/ControlMedico/ControlMedico/View/ViewMedico/PrincipalMedico.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/PrincipalMedico.xaml
@@ -8,17 +8,18 @@
              x:DataType="viewmodel:PrincipalMedicoViewModel"           
              x:Class="ControlMedico.View.PrincipalMedico"
              NavigationPage.HasNavigationBar="False"
+
              >
-    <Grid BackgroundColor="White" RowDefinitions="*,70">
-        <StackLayout Grid.Row="0">
-            <Label Text="Bienvenido" TextColor="Black" Margin="11" FontSize="20"/>
+    <Grid BackgroundColor="White" RowDefinitions="270,*">
+        <StackLayout Grid.Row="0" BackgroundColor="White">
+            <Label Text="Bienvenido" TextColor="Black" Margin="10,5" FontSize="20"/>
             <plugin:Calendar CalendarLayout="Week" SwipeUpToHideEnabled="True"
                                WeekViewUnit="MonthName"
                                MonthLabelColor="Black"
                                ArrowsColor="Black"
                                Culture="{Binding CultureInfo}"
                                ShowYearPicker="False"
-                               BackgroundColor="CadetBlue"
+                               BackgroundColor="CornflowerBlue"
                                DeselectedDayTextColor="Black"
                                SelectedDayTextColor="White"
                                SelectedDayBackgroundColor="Purple"
@@ -26,44 +27,48 @@
                                SelectedDateColor="White"                              
                                SelectedDate="{Binding FechaSeleccionada}"
                                OtherMonthDayColor="Blue"
-                               
+                               Margin="5"
+                               DayTappedCommand="{Binding FechaSeleccionadaCommand}"
                                />
-            <Label Text="Citas para hoy:" TextColor="Black" Margin="11" FontSize="15" FontAttributes="Bold"/>
-            <Button Text="Prueba fecha" Command="{Binding PruebaFechaCommand}"/>
+            <Label x:Name="lblDiaSeleccionado" TextColor="Black" Margin="10,5" FontSize="15" FontAttributes="Bold" Text="{Binding LblDiaSeleccionado}"/>
         </StackLayout>
+
         <StackLayout Grid.Row="1">
-            <ListView x:Name="citas" 
-                      ItemsSource="{Binding ListViewSource}"
+            <ListView x:Name="citas"                    
                       HasUnevenRows="True"
                       IsPullToRefreshEnabled="True"
-                      IsRefreshing="{Binding IsRefreshing}">
+                      ItemsSource="{Binding ListViewSource}"
+                      IsRefreshing="{Binding IsRefreshing}"   
+                      BackgroundColor="AliceBlue"
+                      
+                      >
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
+                        <ViewCell IsContextActionsLegacyModeEnabled="True">
                             <Grid>
-                                <!-- Columna -->
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                
                                 <!-- Filas -->
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="60"/>
                                 </Grid.RowDefinitions>
-                                
+                                <!-- Columnas -->
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="50"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
                                 <!-- Datos mostrados por cada elemento-->
-                                <StackLayout Grid.Column="1" Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" >
-                                    <Label Text="{Binding Hora}" FontSize="20" />
-                                    <Label Text="{Binding Descripcion}" FontSize="12" />
+                                <StackLayout Padding="15,0" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" BackgroundColor="Transparent">
+                                    <Label Text="{Binding Hora}" FontSize="15" TextColor="Black"/>
+                                    <Label Text="{Binding Descripcion}" FontSize="15" TextColor="Black"/>
                                 </StackLayout>
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+
         </StackLayout>
-        <!-- <ViewMedico: Grid.Row="2" Margin="27,5"/>-->
     </Grid>
+    
+
 
 </ContentPage>
