--- a/ControlMedico/ControlMedico/View/ViewMedico/InicioMedico.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/InicioMedico.xaml
@@ -1,15 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodel="clr-namespace:ControlMedico.ViewModel"
              xmlns:plugin="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar"
-             xmlns:controls="clr-namespace:System.Globalization;assembly=System.Globalization"
-             xmlns:ViewMedico="clr-namespace:ControlMedico.View.ViewMedico"
-             x:DataType="viewmodel:PrincipalMedicoViewModel"
-             x:Class="ControlMedico.View.ViewMedico.PrincipalMedico"
-             NavigationPage.HasNavigationBar="False"
-
-             >
+             x:Class="ControlMedico.View.ViewMedico.InicioMedico">
     <Grid>
         <StackLayout Grid.Row="0" BackgroundColor="White">
             <Label Text="Bienvenido" TextColor="Black" Margin="10,5" FontSize="20"/>
@@ -32,14 +25,13 @@
                                />
             <Label x:Name="lblDiaSeleccionado" TextColor="Black" Margin="10,5" FontSize="15" FontAttributes="Bold" Text="{Binding LblDiaSeleccionado}"/>
         </StackLayout>
-
         <StackLayout Grid.Row="1">
-            <ListView x:Name="citas"                    
+            <ListView x:Name="pacientes"                 
                       HasUnevenRows="True"
                       BackgroundColor="AliceBlue"
                       ItemsSource="{Binding ListViewSource}"
                       IsPullToRefreshEnabled="True"                   
-                      IsRefreshing="{Binding IsRefreshing}" >
+                      IsRefreshing="{Binding IsRefreshing}"  >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell IsContextActionsLegacyModeEnabled="True">
@@ -55,11 +47,12 @@
                                 </Grid.ColumnDefinitions>
                                 <!-- Datos mostrados por cada elemento-->
                                 <StackLayout Padding="15,0"
-                                         Grid.Column="1" Grid.Row="0" 
+                                         Grid.Column="1" Grid.Row="0"
                                          HorizontalOptions="CenterAndExpand"
-                                         VerticalOptions="CenterAndExpand"
+                                         VerticalOptions="CenterAndExpand" 
                                          BackgroundColor="Transparent">
                                     <Label Text="{Binding Hora}" FontSize="15" TextColor="Black"/>
+                                    <Label Text="{Binding Descripcion}" FontSize="15" TextColor="Black"/>
                                 </StackLayout>
                             </Grid>
                         </ViewCell>
@@ -67,8 +60,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
+        
+        
     </Grid>
-    
-
-
 </ContentPage>
