Guardar Cita en la BD

--- a/ControlMedico/ControlMedico/View/IniciarSesion.xaml
+++ b/ControlMedico/ControlMedico/View/IniciarSesion.xaml
@@ -49,6 +49,7 @@
                            HeightRequest="50"
                            TextColor="Black"
                            Placeholder="ejemplo@email.com"
+                           PlaceholderColor="Gray"
                            FontSize="15"
                            HorizontalOptions="Center"
                            VerticalOptions="Center"
@@ -65,6 +66,7 @@
                     <Entry WidthRequest="300"
                            HeightRequest="50"
                            Placeholder="*********************"
+                           PlaceholderColor="Gray"
                            TextColor="Black"
                            FontSize="15"
                            HorizontalOptions="Center"
