--- a/ControlMedico/ControlMedico/View/ViewPaciente/InicioPaciente.xaml
+++ b/ControlMedico/ControlMedico/View/ViewPaciente/InicioPaciente.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:plugin="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar"
-             x:Class="ControlMedico.View.ViewMedico.InicioMedico">
+             x:Class="ControlMedico.View.ViewPaciente.InicioPaciente">
     <Grid>
         <StackLayout Grid.Row="0" BackgroundColor="White">
             <Label Text="Bienvenido" TextColor="Black" Margin="10,5" FontSize="20"/>
@@ -38,7 +38,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell IsContextActionsLegacyModeEnabled="True">
-                            <Grid Padding="0,5"> 
+                            <Grid Padding="0,5">
                                 <!-- Filas -->
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
