--- a/ControlMedico/ControlMedico/View/ViewMedico/InicioMedico.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/InicioMedico.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:plugin="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar"
-             x:Class="ControlMedico.View.ViewMedico.InicioMedico">
+             x:Class="ControlMedico.View.ViewMedico.InicioMedico"
+             xmlns:behaviorsPack="clr-namespace:Xamarin.Forms.BehaviorsPack;assembly=Xamarin.Forms.BehaviorsPack" >
     <Grid>
         <StackLayout Grid.Row="0" BackgroundColor="White">
             <Label Text="Bienvenido" TextColor="Black" Margin="10,5" FontSize="20"/>
@@ -33,12 +34,18 @@
                       IsPullToRefreshEnabled="True"                   
                       IsRefreshing="{Binding IsRefreshing}"  
                       SeparatorColor="DarkBlue"
-                      RefreshCommand="{Binding ListRefreshingCommand}"
+                      RefreshCommand="{Binding ListRefreshingCommand}"                    
                       >
+                <ListView.Behaviors>
+                    <behaviorsPack:EventToCommandBehavior 
+                        EventName="ItemTapped"
+                        Command="{Binding ItemTappedCommand}"
+                        EventArgsPropertyPath="Item"/>
+                </ListView.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell IsContextActionsLegacyModeEnabled="True">
-                            <Grid Padding="0,5"> 
+                            <Grid Padding="0,5">
                                 <!-- Filas -->
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
