--- a/ControlMedico/ControlMedico/View/ViewMedico/DetallesCita.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/DetallesCita.xaml
@@ -2,25 +2,26 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ControlMedico.View.ViewMedico.DetallesCita">
-    <Grid BackgroundColor="White" RowDefinitions="55,*">
-        <StackLayout Grid.Row="0"  Margin="25">
+
+    <Grid BackgroundColor="White" RowDefinitions="50,*">
+        <StackLayout Grid.Row="0" Margin="25">
             <Label Text="Detalles de la Cita" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
         </StackLayout>
-        <StackLayout Margin="20" Grid.Row="1">
-            <Grid>
-                <Label Text="Fecha" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="0" />
-                <Label Text="Hora" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="1" />
-                <Label Text="Descripción" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="2"/>
-                <Label Text="Paciente" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="3"/>
-
-                
-                <Label Text="FechaText" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="0" Grid.Column="1"/>
-                <Label Text="HoraText" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="1" Grid.Column="1"/>
-                <Label Text="DescripcionText" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="2" Grid.Column="1"/>
-                <Label Text="PacienteText" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="3" Grid.Column="1"/>
+        <StackLayout Grid.Row="1">
+            <Grid Margin="20" Padding="20,0" RowDefinitions="30,20"> 
+                <DatePicker IsEnabled="False" />
+                <Label Text="Fecha:" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="0" />
+                <Label Text="{Binding Fecha}" TextColor="Blue" FontSize="18" FontAttributes="Bold" Grid.Row="0" Grid.Column="1"/>
+                <Label Text="Hora:" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="1" />
+                <Label Text="{Binding Hora}" TextColor="Blue" FontSize="18" FontAttributes="Bold" Grid.Row="1" Grid.Column="1"/>
             </Grid>
-            <Button Text="Registro Medico"/>
-           
+            <Grid Margin="20,0" Padding="20,0" RowDefinitions="30,40,30,Auto">
+                <Label Text="Paciente:" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="0"/>
+                <Label Text="{Binding NombreCompletoPaciente}" TextColor="Blue" FontSize="18" FontAttributes="Bold" Grid.Row="1"/>
+                <Label Text="Descripción:" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="2"/>
+                <Label Text="{Binding Descripcion}" TextColor="Blue" FontSize="18" FontAttributes="Bold" Grid.Row="3"/>
+                <Button Text="Registrar Datos Medicos" Command="{Binding RegistrarDMCommand}" Grid.Row="5" HeightRequest="60"/>
+            </Grid>
         </StackLayout>
     </Grid>
 </ContentPage>
