--- a/ControlMedico/ControlMedico/View/ViewMedico/DetallesCita.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/DetallesCita.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ControlMedico.View.ViewMedico.DetallesCita">
 
-    <Grid BackgroundColor="White" RowDefinitions="50,*">
-        <StackLayout Grid.Row="0" Margin="25">
-            <Label Text="Detalles de la Cita" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
-        </StackLayout>
-        <StackLayout Grid.Row="1">
+    <Grid BackgroundColor="White">
+        <StackLayout Grid.Row="0">
+            <Grid Margin="40,20" RowDefinitions="30">
+                <Label Text="Detalles de la Cita" TextColor="Black" FontSize="20" FontAttributes="Bold" Grid.Row="0"/>
+            </Grid>
             <Grid Margin="20" Padding="20,0" RowDefinitions="30,20"> 
                 <DatePicker IsEnabled="False" />
                 <Label Text="Fecha:" TextColor="Black" FontSize="18" FontAttributes="Bold" Grid.Row="0" />
