--- a/ControlMedico/ControlMedico/View/ViewMedico/FormularioCita.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/FormularioCita.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControlMedico.View.ViewMedico.NuevaCita">
+             x:Class="ControlMedico.View.ViewMedico.FormularioCita">
     <StackLayout>
         <Grid Margin="20" RowDefinitions="40,40,40,40" ColumnDefinitions="150">
             <Label Text="Nueva Cita" FontSize="25" FontAttributes="Bold"/>
@@ -11,7 +11,6 @@
             <DatePicker Grid.Row="2" Grid.Column="1" VerticalOptions="Center" Date="{Binding FechaSeleccionada}" />
             <Label Text="Hora: " FontSize="18" VerticalOptions="Center" Grid.Row="3"/>
             <TimePicker Grid.Row="3" Grid.Column="1" VerticalOptions="Center" Format="hh:mm:tt" Time="{Binding HoraSeleccionada}" />
-            
         </Grid>
         <Grid Margin="20" RowDefinitions="40,40" >
             <Label Text="Descripción de la Cita:" Grid.Row="0" FontSize="18" VerticalOptions="Center"/>
