--- a/ControlMedico/ControlMedico/View/ViewPaciente/InicioPaciente.xaml
+++ b/ControlMedico/ControlMedico/View/ViewPaciente/InicioPaciente.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:plugin="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar"
+             xmlns:behaviorsPack="clr-namespace:Xamarin.Forms.BehaviorsPack;assembly=Xamarin.Forms.BehaviorsPack"
              x:Class="ControlMedico.View.ViewPaciente.InicioPaciente">
     <Grid>
         <StackLayout Grid.Row="0" BackgroundColor="White">
@@ -12,7 +13,7 @@
                                ArrowsColor="Black"
                                Culture="{Binding CultureInfo}"
                                ShowYearPicker="False"
-                               BackgroundColor="CornflowerBlue"
+                               BackgroundColor="DeepSkyBlue"
                                DeselectedDayTextColor="Black"
                                SelectedDayTextColor="White"
                                SelectedDayBackgroundColor="Purple"
@@ -26,15 +27,21 @@
             <Label x:Name="lblDiaSeleccionado" TextColor="Black" Margin="15,15" FontSize="15" FontAttributes="Bold" Text="{Binding LblDiaSeleccionado}"/>
         </StackLayout>
         <StackLayout Grid.Row="1">
-            <ListView x:Name="pacientes"                 
+            <ListView                
                       HasUnevenRows="True"
                       BackgroundColor="AliceBlue"
                       ItemsSource="{Binding ListViewSource}"
                       IsPullToRefreshEnabled="True"                   
                       IsRefreshing="{Binding IsRefreshing}"  
                       SeparatorColor="DarkBlue"
-                      RefreshCommand="{Binding ListRefreshingCommand}"
+                      RefreshCommand="{Binding ListRefreshingCommand}"                    
                       >
+                <ListView.Behaviors>
+                    <behaviorsPack:EventToCommandBehavior 
+                        EventName="ItemTapped"
+                        Command="{Binding ItemTappedCommand}"
+                        EventArgsPropertyPath="Item"/>
+                </ListView.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell IsContextActionsLegacyModeEnabled="True">
