--- a/ControlMedico/ControlMedico/View/ViewMedico/Monitor.xaml
+++ b/ControlMedico/ControlMedico/View/ViewMedico/Monitor.xaml
@@ -6,7 +6,7 @@
              >
     <StackLayout>
         
-        <Grid Margin="20,20,20,0" RowDefinitions="30">
+        <Grid Margin="20,20,20,0" RowDefinitions="30,40">
             <Label Text="Paciente:" FontSize="20" TextColor="Black" Grid.Row="0"/>
             <Picker BackgroundColor="White"
                     TitleColor="Black"
@@ -22,7 +22,7 @@
                     <x:String>Sebastian López Gómez</x:String>
                     <x:String>Luis Alfonso Torres Castillo</x:String>
                     <x:String>Javier Padrón Rodríguez</x:String>
-                    <x:String>Alicia Carmona Álvarez </x:String>
+                    <x:String>Natalia Portillo Romero</x:String>
                 </Picker.Items>
             </Picker>
         </Grid>
@@ -45,11 +45,14 @@
             <Label Text="°C" FontSize="20" FontAttributes="Bold" TextColor="Black" Grid.Row="2" Grid.Column="3" VerticalOptions="Center" HorizontalOptions="Center"/>
               
         </Grid>
-        <Grid Margin="20" ColumnDefinitions="250,50" HorizontalOptions="Center" ColumnSpacing="-20">
+        <Grid Margin="20,0" ColumnDefinitions="250,50" HorizontalOptions="Center" ColumnSpacing="-20">
             <Label Text="Activar Alertas" TextColor="Black" FontAttributes="Bold" FontSize="18" />
             <Switch IsToggled="{Binding Notificar}" Grid.Row="0" Grid.Column="1"/> 
         </Grid>
-        <Grid Margin="20">
+        <Grid Margin="20" RowDefinitions="50">
+            <Button Text="Ver Historial del Monitoreo" Command="{Binding VerHistorialCommand}" />
+        </Grid>
+        <Grid Margin="20,0">
             <!-- Avisos en la parte inferior -->
             <Label Text="* Aviso: Solo se mostrarán notificaciones del pacientes seleccionado." TextColor="Red" Grid.Row="0"/>
             <Label Text="* Mantenga la aplicación abierta o en segundo plano si desea que el monitor le notifique los valores alterados del paciente" TextColor="Red" Grid.Row="1"/>
